# socialUpload

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.bat  start.sh
.claude/: settings.local.json
backend/: app.py  init_db.py  requirements.txt
backend/blueprints/: douyin_image_bp.py  image_publish_bp.py
backend/ext_api/: __init__.py  task_queue.py
backend/impl/: _browser.py  _utils.py  base_platform.py  registry.py  settings.py
backend/impl/baijiahao/: platform.py  uploader.py
backend/impl/bilibili/: platform.py  uploader.py
backend/impl/channels/: platform.py  uploader.py
backend/impl/douyin/: platform.py  uploader.py
backend/impl/iqiyi/: __init__.py  platform.py
backend/impl/kuaishou/: platform.py  uploader.py
backend/impl/tencent_video/: platform.py
backend/impl/tiktok/: platform.py  uploader.py
backend/impl/xiaohongshu/: platform.py  uploader.py
backend/routes/: frames.py
backend/services/: ffmpeg_service.py
backend/util/: _logger.py
changelog/: 20260518.html  20260520.html  20260525.html
cli/: main.py  state.py
cli/commands/: account.py  config.py  draft.py  login.py  material.py  publish.py
data/: settings.json
design-system/social-auto-upload/: MASTER.md
docs/: requirement.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
scripts/: build-installer.ps1  download-cloakbrowser-binary.py
src-tauri/: Cargo.toml  package-lock.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/cli/: conftest.py  test_config.py  test_material.py
(+48 files in other folders)
