[package]
name = "social-auto-upload-web-ui"
version = "0.4.0"
description = "Social Auto Upload Web UI - Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "social_auto_upload_web_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
